# vopm_standalone_linux

./: .gitignore  CMakeLists.txt  README.md
include/: global_stuff.hpp  jack_process.h  lfo.hpp  op.hpp  opm.hpp  opm_drv.hpp  vopm.hpp
src/: jack_process.c  lfo.cpp  op.cpp  opm.cpp  opm_drv.cpp  vopm.cpp  vopm_standalone.cpp
